made changes on currentcase not yet finished and testing it

--- a/MjaliCovid19KE/confirmedcase/templates/confirmed.html
+++ b/MjaliCovid19KE/confirmedcase/templates/confirmed.html
@@ -579,7 +579,7 @@
                     <div class="card card-body">
                         <h6 class="tx-uppercase tx-11 tx-spacing-1 tx-color-02 tx-semibold mg-b-8">Confirmed Cases</h6>
                         <div class="d-flex d-lg-block d-xl-flex align-items-end">
-                            <h3 class="tx-normal tx-rubik mg-b-0 mg-r-5 lh-1">7</h3>
+                            <h3 class="tx-normal tx-rubik mg-b-0 mg-r-5 lh-1">{{confirmedcases}}</h3>
                         </div>
                     </div>
                 </div><!-- col -->
@@ -595,7 +595,7 @@
                     <div class="card card-body">
                         <h6 class="tx-uppercase tx-11 tx-spacing-1 tx-color-02 tx-semibold mg-b-8">Intensive Cases</h6>
                         <div class="d-flex d-lg-block d-xl-flex align-items-end">
-                            <h3 class="tx-normal tx-rubik mg-b-0 mg-r-5 lh-1">0</h3>
+                            <h3 class="tx-normal tx-rubik mg-b-0 mg-r-5 lh-1">{{intensivecare}}</h3>
                             <p class="tx-11 tx-color-03 mg-b-0">
                                 <!-- <span class="tx-medium tx-danger">0.3% <i class="icon ion-md-arrow-down"></i></span> than last week -->
                             </p>
@@ -606,7 +606,7 @@
                     <div class="card card-body">
                         <h6 class="tx-uppercase tx-11 tx-spacing-1 tx-color-02 tx-semibold mg-b-8">Discharged</h6>
                         <div class="d-flex d-lg-block d-xl-flex align-items-end">
-                            <h3 class="tx-normal tx-rubik mg-b-0 mg-r-5 lh-1">0</h3>
+                            <h3 class="tx-normal tx-rubik mg-b-0 mg-r-5 lh-1">{{recoveredpatients}}</h3>
                         </div>
                     </div>
                 </div><!-- col -->
